refactor(leetcode): expand Binary Tree Right Side View tests
- replace parameterized test with 10 individual tests with descriptive names
- add edge cases: single node, left/right only, both children, skewed trees
- add leetCodeExample2 for deep left subtree visibility
- refactor implementation to use explicit imports and rename parameters